0.0.0
=====
* initial release

0.0.1
=====
* fix a bug with nonstandard pkglibdir
* more access
  - cardlist
  - XPROBE
  - mode
* transfer function plot example

0.0.2
=====
* numpy cleanup
* matrix access
* node map access
* pz analysis command

0.0.3 - wip
=====
* improve error handling
* more portable tests (denoise)
* improve python ELEMENT access
* suspend python2 testing